fixed z-index

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -8,12 +8,10 @@ main {
   justify-content: flex-start;
   flex-direction: column;
   padding: 15px 80px;
-  z-index: -2;
 }
 .handle {
   width: 85vw;
   display: flex;
-  z-index: -3;
 }
 
 .top-handle {
