--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,4 +21,5 @@ canvas {
   background: #87895d;
   border-radius: 5px;
   overflow: hidden;
+  z-index: 10;
 }
