--- a/src/styles/speakers.css
+++ b/src/styles/speakers.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 200px;
-  z-index: -1;
+  z-index: 3;
 }
 .speaker {
   width: 505px;
